src/progs/test_suite/data/GdbmiPtTest/parse_error/syntax/multi_line_error.mi
^error^
(gdb)
^
^error abc
(gdb)
^error,msg="bogus"
(gdb)
